# SibFU

./: .gitignore  README.md
C#/ЛР1/: Отчет.docx
C#/ЛР2/: Отчет.docx
C#/ЛР3/: Отчет.docx
C#/ЛР4/: Отчет.docx
C#/ЛР5/: Отчет.docx
CSP&ZEN/ПР1/: Отчет.docx
CSP&ZEN/ПР2/: Отчет.docx
CSP&ZEN/ПР3/: Отчет.docx  Ссылки.txt
CSP&ZEN/ПР4/: Отчет.docx
CSP&ZEN/ПР5/: Отчет.docx
CSP&ZEN/ПР6/: Отчет.docx
Ensemble/ПР1/: Employee.xlsx  Employee.xml  EmployeeCLS.xml  Отчет.docx
Ensemble/ПР2/: EmailScanDescription.doc  Отчет.docx
Ensemble/ПР3/: EmailForm.csp  EmailSubmit.csp  Отчет.docx
Ensemble/ПР4/: Отчет.docx
Software Reability/ЛР1/: Задание.txt  Отчет.docx
Software Reability/ЛР2/: Задание.txt  Отчет.docx
Алгоритмы и структуры данных/ЛР1/: Отчет.docx
Алгоритмы и структуры данных/ЛР2/: Отчет.docx
Алгоритмы и структуры данных/ЛР3/: Отчет.doc
Алгоритмы и структуры данных/ЛР4/: Отчет.doc
Алгоритмы и структуры данных/ЛР5/: Отчет.doc
Веб-приложения/site v1.0/: site.asp  site.css  site.js
Веб-приложения/site v2.0/: catalog.html  feedback.html  index.html  main.html  material.html  publications.html
Интеллектуальные технологии/ЛР6/: Отчет.docx
Методы оптимизации/: Темы лабораторных по траекториям Сокращенно.docx
Основы программирования/: README.md
Системное программирование/: README.md
Системное программирование/ЛР5/server/: Makefile  Makefile.in  config.status  configure  configure.ac
Системное программирование/ЛР5/server/src/: Makefile  Makefile.in  server
Теория баз данных/: README.md
Теория языков программирования/: README.md
(+867 files in other folders)
